# simple-agent

./: .env.example  .gitignore  DEV_SUMMARY.md  README.md  build_inventory.py  build_inventory_p2.py  build_inventory_p3.py  build_inventory_p4.py  build_with_workflow.py  main.py  pyproject.toml  simple-agent.prd  student_mgmt.md
demo/: books-library-mgmt-design.md
demo/inventory_app/: app.py  db.py
demo/inventory_app2/: app.py  db.py
demo/inventory_app2/.reports/: report_20260423_205620.md
docs/: prd-template.md
docs/superpowers/plans/: 2026-04-30-project-scaffold-and-rules.md  2026-04-30-skill-call.md
docs/superpowers/specs/: 2026-04-27-validation-and-fix-design.md  2026-04-27-workflow-retry-boundary-design.md  2026-04-30-project-scaffold-and-rules-design.md  2026-04-30-project-scaffold-and-rules-postmortem.md  2026-04-30-skill-call-design.md
skills/superpowers/: brainstorming.md  writing-plans.md
src/simple_agent/: __init__.py  agent.py  agent_md_template.md  compactor.py  config.py  dev_workflow.py  exceptions.py  llm_client.py  messages.py  prompts.py  scaffold.py  task_report.py
src/simple_agent/framework_rules/: fastapi.md  (+3 more)
tests/: conftest.py
tests/integration/: test_agent_live.py
tests/unit/: test_agent.py  test_agent_failures.py  test_bash.py  test_compactor.py  test_config.py  test_file_tools.py  test_git.py  test_llm_client.py  test_memory.py  test_messages.py  test_prompts.py  test_scaffold.py  test_skill_integration.py  test_skill_loader.py  test_skill_registry.py  test_skill_tool.py  test_task_report.py  test_tools.py  test_workflow.py
(+16 files in other folders)
